<resources>

    <!-- General -->
    <string name="app_name">Bikesmanager</string>
    <string name="title_activity_maps">Bikesmanager</string>
    <string name="title_activity_chart">Status</string>
    <string name="title_activity_list">Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_edit_profile">Edit profile</string>

    <!-- Common texts-->
    <string name="text_availability">Availability</string>
    <string name="text_bookings">Bookings</string>
    <string name="text_occupied">In use</string>
    <string name="text_total">Total</string>
    <string name="text_set">Set</string>
    <string name="text_no">No</string>
    <string name="text_server_address">Server address</string>
    <string name="text_server_port">Server port</string>
    <string name="text_fare">Fare:</string>
    <string name="text_full_name">Full name</string>
    <string name="text_mail">Email</string>
    <string name="text_user_name">User name</string>
    <string name="text_password">Password</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_ok">OK</string>
    <string name="text_format_money">%1$.2f€</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_euro">€</string>
    <string name="text_save">Save</string>
    <string name="text_book">Book</string>
    <string name="text_error">Error</string>
    <string name="text_operation_completed">Operation completed</string>
    <string name="text_bikes">Bicycles</string>
    <string name="text_moorings">Moorings</string>
    <string name="text_sync_error">Error while sync with the server</string>

    <!-- File to store username and password -->
    <string name="file_user_preferences">user_file</string>

    <!-- SignUpActivity.java and EditProfileActivity.java -->
    <string name="text_err_name">Enter your full name</string>
    <string name="text_err_mail">Enter a valid email address</string>
    <string name="text_err_username">Enter your user name</string>
    <string name="text_err_password">Enter the password</string>
    <string name="toast_user_not_available">Username or Email not available</string>
    <string name="toast_profile_updated">Profile updated</string>
    <string name="dialog_confirm_changes">Save changes?</string>

    <!-- LoginActivity.java -->
    <string name="toast_user_not_found">User not found</string>
    <string name="toast_incorrect_password">Incorrect password for user \'%1$s\'</string>

    <!-- ChartActivity.java -->
    <string name="chart_total_bikes_msg">Total bikes: %1$d</string>
    <string name="chart_total_moorings_msg">Total moorings: %1$d</string>

    <!-- SigninDialogFragment.java -->
    <string name="builder_sign_in_msg">Enter user data</string>

    <!-- ConnectionDataDialogFragment.java -->
    <string name="builder_connection_data_msg">Set connection data</string>

    <!-- MapsActivity.java -->
    <string name="dialog_logout">Log out?</string>
    <string name="text_bike_operation_impossible">Station availability don\'t allow to complete the operation</string>
    <string name="text_location_not_granted">Not possible to determine your location</string>
    <string name="text_bike_taken">You already have a bike taken or booked in other station</string>
    <string name="text_bike_not_taken">You don\'t have any bike taken or you have moorings booked in other station</string>
    <string name="text_balance_insufficient">Current balance insufficient</string>
    <string name="desc_imageButton_account">Go to account</string>
    <string name="text_state_bike_taken">Bike taken!</string>
    <string name="text_state_bike_not_taken">You have no bike</string>
    <string name="text_state_superuser">Superuser activated</string>
    <string name="text_snippet_marker">B: %1$d/%2$d | M: %3$d/%4$d | Fare: %5$.2f€</string>

    <!-- ListActivity.java -->
    <string name="toast_id_not_found">\'%1$s\' not found</string>

    <!-- AccountActivity.java -->
    <string name="dialog_delete_account">Bookings will be cancelled and your money given back. Delete account?</string>
    <string name="dialog_cancel_booking">Cancel booking?</string>
    <string name="dialog_cancel_positive">Yes, cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="textView_no_bikes">No bikes booked</string>
    <string name="textView_no_moorings">No moorings booked</string>
    <string name="textView_remaining_time">Remaining time: %1$02d:%2$02d</string>
    <string name="dialog_error_delete_account">Leave your bike first</string>

    <!-- SignInDialogFragment.java -->
    <string name="builder_ok_positive">Sign in</string>

    <!-- DepositMoneyDialogFragment.java -->
    <string name="builder_deposit">Amount to deposit</string>
    <string name="builder_deposit_positive">Deposit</string>

    <!-- BookDialogFragment.java -->
    <string name="builder_book_msg">Choose booking</string>

    <!-- HttpDispatcher.java -->
    <string name="toast_unable_connection">Unable to establish connection</string>

    <!-- HttpWorkers .java -->
    <string name="progress_title">Wait&#8230;</string> <!-- "&#8230;" = "..." -->
    <string name="progress_body">Updating…</string>

    <!-- fragment_login.xml -->
    <string name="desc_image_launcher">App icon</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_sign_in">Sign in</string>
    <string name="textView_version">Version</string>
    <string name="desc_image_button_connection_settings">Button to change connection data if needed</string>

    <!-- fragment_account.xml -->
    <string name="textView_book_bike">Booked bike</string>
    <string name="textView_book_moorings">Booked moorings</string>
    <string name="textView_profile_balance_text">Current balance</string>
    <string name="button_deposit">Deposit</string>
    <string name="button_edit_profile">Edit profile</string>
    <string name="button_delete_account">Delete account</string>

    <!-- fragment_welcome.xml -->
    <string name="textView_welcome">Welcome %1$s!</string>
    <string name="desc_image_welcome">Welcome image</string>
    <string name="textView_welcomePresent">A little present for you&#8230;</string> <!-- "&#8230;" = "..." -->
    <string name="button_great">Great!</string>

    <!-- fragment_list.xml -->
    <string name="hint_search">Search</string>
    <string name="desc_image_button_search">Search over station list</string>

    <!-- listview_item.xml -->
    <string name="textView_lastMod">Last modification:</string>
    <string name="button_showInMap">Show in map</string>

    <!-- menus .xml -->
    <string name="item_text_refresh">Refresh</string>

    <!-- menu_list.xml -->
    <string name="item_text_collapse">Collapse</string>
    <string name="item_text_expand">Expand</string>

    <!-- menu_bottomsheet.xml -->
    <string name="item_text_take">Take bike</string>
    <string name="item_text_leave">Leave bike</string>

    <!-- menu_main.xml -->
    <string name="item_text_list">List</string>
    <string name="item_text_chart">Chart</string>
    <string name="item_text_account">Account</string>
    <string name="item_text_settings">Settings</string>
    <string name="item_text_logout">Log out</string>

    <!-- dialog_deposit_money.xml -->
    <string name="dialog_deposit">Deposit</string>

    <!-- dialog_book.xml -->
    <string name="dialog_book_bike">Book bike</string>
    <string name="dialog_book_moorings">Book moorings</string>

    <!-- preferences.xml -->
    <string name="title_connection">Connection data</string>
    <string name="title_user_options">User options</string>
    <string name="switch_title">Superuser</string>
    <string name="switch_summary">Avoids checks while taking or leaving bikes</string>
    <string name="editText_server_summary">Server IP address for connection</string>
    <string name="editText_port_summary">Server port for connection</string>

</resources>
