<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_user_options">
        <SwitchPreference
            android:key="superuser"
            android:title="@string/switch_title"
            android:summary="@string/switch_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_connection">
        <EditTextPreference
            android:key="server_address"
            android:title="@string/text_server_address"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:defaultValue="192.168.1.120"
            android:summary="@string/editText_server_summary"/>

        <EditTextPreference
            android:key="server_port"
            android:inputType="number"
            android:title="@string/text_server_port"
            android:defaultValue="8080"
            android:summary="@string/editText_port_summary"/>
    </PreferenceCategory>


</PreferenceScreen>