<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_list"
        android:icon="@drawable/ic_action_list"
        android:title="@string/item_text_list"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_chart"
        android:icon="@drawable/ic_action_pie_chart"
        android:title="@string/item_text_chart"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/item_text_refresh"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/item_text_settings"
        app:showAsAction="ifRoom" />

</menu>
