<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amlopezc.bikesmanager.WelcomeActivityFragment"
    android:background="@color/primaryColor"
    android:padding="@dimen/activity_margin">

    <TextView android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_welcome"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/main_texts_padding"/>

    <ImageView android:id="@+id/img_present"
        android:layout_width="@dimen/main_image_dimens"
        android:layout_height="@dimen/main_image_dimens"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/widgets_standard_margin"
        android:layout_marginBottom="@dimen/widgets_standard_margin"
        android:layout_below="@+id/textView_welcome"
        android:src="@mipmap/ic_present"
        android:contentDescription="@string/desc_image_welcome" />

    <TextView android:id="@+id/textView_welcomePresent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/img_present"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/textView_welcomePresent"
        android:textColor="@color/white"/>

    <TextView android:id="@+id/textView_welcomeMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/textView_welcomePresent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/main_widgets_margin"
        android:layout_marginBottom="@dimen/main_widgets_margin"
        android:text="@string/textView_welcomeMoney"
        android:textColor="@color/accentColor"
        android:textStyle="bold"/>

    <Button android:id="@+id/button_great"
        android:layout_width="@dimen/custom_buttons_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_welcomeMoney"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/main_widgets_margin"
        android:text="@string/button_great"
        android:textAllCaps="false"
        android:textColor="@color/darkPrimaryColor"
        android:background="@drawable/custom_button_light"/>

</RelativeLayout>