<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:background="@color/white"
    tools:context="com.amlopezc.bikesmanager.EditProfileActivityFragment" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutProfile_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widgets_large_margin">
        <EditText
            android:id="@+id/editTextProfile_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="30"
            android:inputType="textPersonName"
            android:hint="@string/text_full_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutProfile_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widgets_standard_margin">
        <EditText
            android:id="@+id/editTextProfile_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:hint="@string/text_mail"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutProfile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widgets_standard_margin">
        <EditText
            android:id="@+id/editTextProfile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="30"
            android:hint="@string/text_user_name"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>